Forgot to commit lawl

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </header>
 
   <audio id="player">
-    <source src="https://radio.nya.tf/listen/nya_nya_radio/emilia.flac">
+    <source>
   </audio>
 
   <nav id="navbar">
@@ -53,7 +53,7 @@
     <aside id="first">
       <div id="controls">
         <button id="playpause">
-          <span class="fa-fw fa-solid fa-stop"></span>
+          <span class="fa-fw fa-solid fa-play"></span>
           Stopped
         </button>
         <div class="volume">
