--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
   <link rel="icon" href="/favicon.ico" sizes="any">
   <link rel="icon" href="/icon.svg" type="image/svg+xml">
 
-  <link rel="manifest" href="site.webmanifest">
+  <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#77B19D">
 
   <script defer src="assets/font-awesome/js/solid.js"></script>
   <script defer src="assets/font-awesome/js/fontawesome.js"></script>
 
+  <script defer data-domain="radio.byemc.xyz" src="https://analytics.byecorps.com/js/script.js"></script>
 
 </head>
 
