--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
 
   <header>
-    <div class="start"><h1>radio waves</h1></div>
+    <div class="start"><h1>waves</h1></div>
   </header>
 
   <audio id="player">
@@ -143,6 +143,20 @@
     </section>
     <section id="settings" hidden="hidden" aria-hidden="true">
       <h2>Settings</h2>
+
+      <div class="stack v">
+
+        <div class="stack h">
+          <img src="img/radio-icon.png" alt="Waves icon" class="rounded appicon-settings">
+          <div class="stack v nogap">
+            <span class="spacer"></span>
+            <span class="title">Waves</span>
+            <span class="subtitle">(c) byemc 2024</span>
+            <span class="spacer"></span>
+          </div>
+        </div>
+
+      </div>
 
     </section>
 
