Work better with Icecast stations.

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
           </div>
         </div>
 
-        <div class="ship song compact nextup stack h">
+        <div id="nextup" class="ship song compact nextup stack h">
           <img src="img/radio-icon.png" alt="No album art" class="rounded" id="next-song-art">
           <div class="stack v nogap justify-center">
             <span class="subtitle">Next up:</span>
@@ -172,7 +172,7 @@
         </div>
       </div>
 
-      <h2 style="margin: 0.5rem 0">History</h2>
+      <h2 id="history-title" style="margin: 0.5rem 0">History</h2>
       <div id="history" class="stack v">
         No history :(
       </div>
